--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -90,11 +90,6 @@ nav.tablet-desktop ul li:last-child {
     margin-right: 20;
 }
 
-/* Media queries for mobile */
-@media screen and (max-width:768px) {
-    
-}
-
 /* Hide tablet destop navigation */
 nav.tablet-desktop {
     display: none;
@@ -112,4 +107,16 @@ footer {
 nav.tablet-desktop {
     display: flex;
     justify-content: flex-end;
+}
+
+/* Media Query for Tablet Viewport */
+@media screen and (min-width: 630px), print {
+		/* Tablet Viewport: Show tablet-desktop class, hide mobile class */
+	.tablet-desktop {
+		display: block;
+	}
+
+	.mobile, .mobile-nav {
+		display: none;
+	}
 }
