--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -15,6 +15,9 @@ body, header, nav, footer, h3, div, img, ul, section, video {
 
 #container {
 	font-family: 'Francois One', sans-serif;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
 }
 
 /* Style for rules for hamburger menu */
@@ -93,19 +96,22 @@ nav .tablet-desktop {
     list-style-type: none;
 }
 
-.tablet-desktop ul li {
+.tablet-desktop li {
     display: inline-block;
     margin-right: 30px;
 }
 
-.tablet-desktop ul li:last-child {
+.tablet-desktop li:last-child {
     margin-right: 20;
 }
 
-nav li a:hover {
+.tablet-desktop a {
+	padding: 10px;
+}
+
+.tablet-desktop a:hover {
     color: #000;
     background-color: #ccccbf;
-    transform: scale(1.3);
 }
 
 .tablet-desktop, #menu-links {
@@ -117,8 +123,19 @@ a{
     color: #375c83;
 }
 
+.home-images {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+}
+
+.home-images img {
+	height: 300px;
+}
+
 footer {
     text-align: center;
+	margin-top: auto;
 }
 
 /* Media Query for Tablet Viewport */
@@ -131,5 +148,9 @@ footer {
 
 	.mobile, .mobile-nav {
 		display: none;
+	}
+	
+	.home-images {
+		flex-direction: row;
 	}
 }
