--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -106,16 +106,18 @@ nav .tablet-desktop {
 }
 
 .tablet-desktop a {
+	display: inline-block;
 	padding: 10px;
 }
 
 .tablet-desktop a:hover {
     color: #000;
     background-color: #ccccbf;
+	transform: scale(1.3);
 }
 
 .tablet-desktop a:active {
-	background-color: #ccccbf;
+	background-color: #ece4cc;
 }
 
 .tablet-desktop, #menu-links {
