Working on grid in home page

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -139,6 +139,19 @@ a{
 	height: 300px;
 }
 
+.grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    border-top: 1px solid black;
+    border-right: 1px solid black;
+}
+
+.grid > span {
+    padding: 8px 4px;
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
+}
+
 footer {
     text-align: center;
 	margin-top: auto;
