--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -53,6 +53,11 @@ body, header, nav, footer, h3, div, img, ul, section, video {
 	border-radius: 20px;
 }
 
+/*style rule for slide show*/
+.slideshow-container .mySlide {
+	display: none;
+}
+
 /* Style rules for header */
 header {
 	background-color: #b4b4a6;
@@ -223,4 +228,61 @@ footer {
 	footer {
 		justify-content: left;
 	}
+}
+
+/* Carousel slide*/
+.mySlide {
+	display: none;
+	border: 2px solid #b4b4a6;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8);
+}
+
+.slideshow-container {
+	position: relative;
+	max-width: 100%;
+	margin: auto;
+}
+
+
+.text {
+	color: #f2f2f2;
+	font-size: 15px;
+	padding: 8px 12px;
+	position: absolute;
+	bottom: 8px;
+	width: 100%;
+	text-align: center;
+}
+
+.numbertext {
+	color: #f2f2f2;
+	font-size: 12px;
+	padding: 8px 12px;
+	position: absolute;
+	top: 0;
+}
+
+.dot {
+	cursor: pointer;
+	height: 15px;
+	width: 15px;
+	margin: 0 2px;
+	background-color: #bbb;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+	background-color: #717171;
+}
+
+.fade {
+	animation-name: fade;
+	animation-duration: 1.5s;
+}
+
+@keyframes fade {
+	from {opacity: .4;}
+	to {opacity: 1;}
 }
